--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,23 @@
 [versions]
-agp = "8.13.2"
+agp = "8.7.3"
 kotlin = "2.0.21"
-coreKtx = "1.10.1"
+coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.6.1"
-activityCompose = "1.8.0"
-composeBom = "2024.09.00"
-navigationCompose = "2.8.0"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+lifecycleRuntimeKtx = "2.8.7"
+activityCompose = "1.9.3"
+composeBom = "2024.11.00"
+navigationCompose = "2.8.4"
 room = "2.6.1"
-lifecycleViewmodel = "2.6.1"
+lifecycleViewmodel = "2.8.7"
 datastore = "1.1.1"
-coroutines = "1.7.3"
-workManager = "2.9.0"
+coroutines = "1.9.0"
+workManager = "2.10.0"
 camerax = "1.4.0"
 mlkitPose = "18.0.0-beta4"
 permissions = "0.36.0"
+ksp = "2.0.21-1.0.28"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -53,4 +54,4 @@ google-accompanist-permissions = { group = "com.google.accompanist", name = "acc
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
